updates, button to reveal subset folder